[package]
name = "format-sql-query"
version = "0.4.1-alpha.0"
authors = ["Jakub Pastuszek <jpastuszek@protonmail.com>"]
description = "Collection of types and helpers for building hopefully correctly escaped SQL queries"
repository = "https://git.sr.ht/~jpastuszek/format-sql-query"
documentation = "https://docs.rs/format-sql-query"
readme = "README.md"
keywords = ["sql", "escape"]
categories = ["database"]
license = "MIT"
edition = "2018"

[dependencies]
itertools = "0.8.0"
